# aldapy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml
docs/: architecture.d2  example_compatibility.md  extending-aldakit.md  extending-pyalda.md  (+2 more)
src/: CMakeLists.txt
src/aldakit/: __init__.py  __main__.py  _libremidi.cpp  _tsf.cpp  api.py  ast_nodes.py  cli.py  config.py  constants.py  parser.py  repl.py  scanner.py  score.py  tokens.py
src/aldakit/compose/: __init__.py  attributes.py  base.py  chords.py  core.py  generate.py  part.py  scales.py  transform.py
src/aldakit/ext/prompt_toolkit/: __init__.py  buffer.py  renderer.py  search.py  utils.py
src/aldakit/ext/prompt_toolkit/application/: __init__.py  application.py
src/aldakit/ext/prompt_toolkit/completion/: __init__.py
src/aldakit/ext/prompt_toolkit/contrib/completers/: system.py
src/aldakit/ext/prompt_toolkit/contrib/regular_languages/: compiler.py
src/aldakit/ext/prompt_toolkit/contrib/telnet/: server.py
src/aldakit/ext/prompt_toolkit/eventloop/: __init__.py
src/aldakit/ext/prompt_toolkit/formatted_text/: __init__.py  base.py  utils.py
src/aldakit/ext/prompt_toolkit/input/: win32.py
src/aldakit/ext/prompt_toolkit/key_binding/: __init__.py  defaults.py  key_bindings.py
src/aldakit/ext/prompt_toolkit/key_binding/bindings/: basic.py  completion.py  emacs.py  mouse.py  open_in_editor.py  page_navigation.py  search.py  vi.py
src/aldakit/ext/prompt_toolkit/layout/: __init__.py  containers.py  controls.py  layout.py  margins.py  menus.py  processors.py  scrollable_pane.py
src/aldakit/ext/prompt_toolkit/output/: defaults.py  win32.py
src/aldakit/ext/prompt_toolkit/shortcuts/: __init__.py  choice_input.py  dialogs.py  prompt.py  utils.py
src/aldakit/ext/prompt_toolkit/shortcuts/progress_bar/: __init__.py  base.py  formatters.py
src/aldakit/ext/prompt_toolkit/styles/: __init__.py  style.py
src/aldakit/ext/prompt_toolkit/widgets/: __init__.py  base.py  dialogs.py  menus.py  toolbars.py
src/aldakit/ext/wcwidth/: __init__.py
src/aldakit/midi/: __init__.py  generator.py  midi_to_ast.py  smf.py  smf_reader.py  soundfont.py  transcriber.py  transform.py  types.py
src/aldakit/midi/backends/: __init__.py  async_playback.py  base.py  libremidi_backend.py  tsf_backend.py
src/pyalda/: __init__.py  __main__.py  ast_nodes.py  cli.py  errors.py  parser.py  repl.py  scanner.py  tokens.py
src/pyalda/ext/: __init__.py
src/pyalda/ext/wcwidth/: __init__.py  wcwidth.py
src/pyalda/midi/: __init__.py
src/pyalda/midi/backends/: __init__.py  base.py  libremidi_backend.py
(+26 files in other folders)
